Fix bug on iOS Safari

--- a/src/app/svg/svg.component.css
+++ b/src/app/svg/svg.component.css
@@ -1,4 +1,4 @@
 svg {
-  height: 100%;
+  max-height: 100%;
   width: 100%;
 }
